# BtD_Ex2

./: server.py
client/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
client/components/st7789/: axp192.c  axp192.h
client/main/: CMakeLists.txt  main.c  screen.c  screen.h  sensors.c  sensors.h  tcp_client_v4.c  tcp_client_v6.c
